project/logs/20250523_152538.log
Use Adapter:NVIDIA GeForce RTX 4060 Laptop GPU

FeatureLevel : 12.2

Complete create D3D12Device!!!

Begin CompileShader, path:Object3D.VS.hlsl,profile:vs_6_0

Object3D.VS.hlsl:19:21: error: cannot convert from 'float32_t2' to 'float32_t4'
    output.texcoord = input.texcoord;
                    ^

